<resources>
    <string name="app_name">Jaipur: Card Game - Score Helper</string>
    <string name="header_add_player_activity">New Player</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jaipur: Card Game \n Score Helper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new_game">New Game</string>
    <string name="menu_players_management">Manage Players</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_game_history">Game History</string>
    <string name="menu_feedback_support">Support</string>
    <string name="menu_rate_me">Rate Me</string>
    <string name="menu_rules">Game Rule</string>
    <string name="menu_about">About</string>

    <string name="playeractivity_title_for_add_player">Add Player</string>
    <string name="playeractivity_title_for_edit_player">Edit Player</string>
    <string name="editText_add_player_hint">Player Name</string>
    <string name="textView_add_player_avatar">Profile</string>
    <string name="textView_add_player_notice">Click Image to change the profile</string>
    <string name="success_player_added">New Player Added successfully!!!</string>
    <string name="success_player_updated">Player Updated successfully!!!</string>
    <string name="success_player_deleted">Player Removed successfully!!!</string>
    <string name="error_player_not_added">No Player Added/Updated</string>
    <string name="error_player_not_saved">Error while saving Player!!! Please try again. Apologies for the inconvenience caused.</string>

    <string name="alertdialog_confirmation_title">Confirm</string>
    <string name="alertdialog_confirmation_message">Deleting this player, will delete all game history associated with the player.\nAre you sure to delete this player?</string>
    <string name="alertdialog_confirmation_positive_button">Yes</string>
    <string name="alertdialog_confirmation_negative_button">No</string>
    <string name="alertdialog_winner_title">Congrats!!!!</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_add_player">New Player</string>
    <string name="title_activity_image_pick_crop">Image Picker</string>
    <string name="imageview_add_player_camera">Take Photo</string>
    <string name="imageview_add_player_gallery">Choose from Gallery</string>
    <string name="alertdialog_title_add_profile_photo">Add Profile Photo</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="image_picker_issue">Error!! Unable to set profile picture...</string>
    <string name="player_update_issue">Error!! Unable to update the player profile now...</string>
    <string name="edittext_playername_error">Player Name cannot be blank</string>
    <string name="edittext_playername_exists_error">Player Name already exists!!!</string>
    <string name="playeractivity_external_path">profileImages</string>
    <string name="gameactivity_external_path">gameImages</string>
    <string name="imagepickandcropactivity_cache_path">jaipurImages</string>
    <string name="empty_players_found">No Players Found!!!!</string>

    <string name="new_game_fragment_select_player_textView">Select Player</string>
    <string name="new_game_fragment_vs_textView">VS</string>
    <string name="new_game_fragment_select_player_error_message">Please select two players to start the game...</string>

    <string name="starting_player_activity_title">Starting Player</string>
    <string name="starting_player_activity_firstplayer_textview">First Player</string>

    <string name="color_activity_actionbar">#007869</string>

    <string name="retry_button_text">Try Again</string>
    <string name="game_create_issue">Error!! Unable to create a game...</string>

    <string name="diamond_calculation_fragment_label">Diamond</string>
    <string name="gold_calculation_fragment_label">Gold</string>
    <string name="silver_calculation_fragment_label">Silver</string>
    <string name="cloth_calculation_fragment_label">Cloth</string>
    <string name="spice_calculation_fragment_label">Spice</string>
    <string name="leather_calculation_fragment_label">Leather</string>
    <string name="three_card_token_calculation_fragment_label">3 Card Tokens</string>
    <string name="four_card_token_calculation_fragment_label">4 Card Tokens</string>
    <string name="five_card_token_calculation_fragment_label">5 Card Tokens</string>
    <string name="camel_token_calculation_fragment_label">Camel Token</string>

    <string name="imageview_content_description_text_for_player">Player Profile</string>
    <string name="imageview_content_description_text_for_coins">Coins</string>
    <string name="round_calc_description">Drag &amp; Drop the coins to the player to add it\nClick the player to remove the coins</string>
    <string name="camera_error">Unable to take picture at the moment!!! Please try again.</string>
    <string name="camera_success">Picture saved successfully!!!</string>
    <string name="game_success">Game saved successfully!!!</string>

    <string name="gamesummary_roundone_title">Round 1</string>
    <string name="gamesummary_roundtwo_title">Round 2</string>
    <string name="gamesummary_roundthree_title">Round 3</string>
    <string name="game_summary_activity_title">Game Summary</string>
    <string name="alertdialog_backbutton_press_game_summary_msg">Current game data will be lost!!! \nDo you want to continue?</string>
    <string name="alertdialog_backbutton_press_round_calc_msg">Current round data will be lost!!! \nDo you want to continue?</string>
    <string name="alertdialog_backbutton_press_item_calc_msg">Current selection will be lost!!! \nDo you want to continue?</string>
    <string name="alertdialog_backbutton_press_round_calc_round_one_msg">Current round and game data will be lost!!! \nDo you want to continue?</string>
    <string name="reset_button_text">Reset</string>
    <string name="rematch_button_text">Rematch</string>
    <string name="save_button_text">Save</string>
    <string name="share_button_text">Share</string>
    <string name="ok_button_text">Ok</string>

    <string name="default_score">0</string>

    <string name="won_textview_message">Winner</string>
    <string name="empty_game_textview_message">No Games found!!!!</string>
    <string name="game_image_desc_message">Click on the image to change it</string>


    <string name="manage_players_main_activity_adUnit_Id">ca-app-pub-4504001719511985/9098149955</string>
    <string name="player_add_update_activity_adUnit_Id">ca-app-pub-4504001719511985/8391750553</string>
    <string name="starting_player_activity_adUnit_Id">ca-app-pub-4504001719511985/8008607175</string>
    <string name="round_summary_activity_adUnit_Id">ca-app-pub-4504001719511985/6503953818</string>
    <string name="game_history_activity_adUnit_Id">ca-app-pub-4504001719511985/3877790470</string>
    <string name="save_game_inter_adUnit_Id">ca-app-pub-4504001719511985/6093832229</string>
    <string name="about_game_adunit_id">ca-app-pub-4504001719511985/8434523714</string>
    <string name="icon_url">https://www.flaticon.com/</string>

    <string name="hello_blank_fragment">Hello blank</string>

</resources>
