<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_new_game">

    <fragment
        android:id="@+id/nav_new_game"
        android:name="com.boardgames.jaipur.ui.newgame.NewGameFragment"
        android:label="@string/menu_new_game"
        tools:layout="@layout/fragment_new_game"/>

    <fragment
        android:id="@+id/nav_players_management"
        android:name="com.boardgames.jaipur.ui.playersmanagement.PlayersManagementFragment"
        android:label="@string/menu_players_management"
        tools:layout="@layout/fragment_players_management" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.boardgames.jaipur.ui.statistics.StatisticsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_game_history"
        android:name="com.boardgames.jaipur.ui.gamehistory.GameHistoryFragment"
        android:label="@string/menu_game_history"
        tools:layout="@layout/fragment_game_history" />

    <fragment
        android:id="@+id/nav_rate_me"
        android:name="com.boardgames.jaipur.ui.rateme.RateMeFragment"
        android:label="@string/menu_rate_me"
        tools:layout="@layout/fragment_rate_me" />


    <fragment
        android:id="@+id/nav_about"
        android:name="com.boardgames.jaipur.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>