<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_game"
            android:icon="@drawable/plus"
            android:title="@string/menu_new_game" />
        <item
            android:id="@+id/nav_players_management"
            android:icon="@drawable/players"
            android:title="@string/menu_players_management" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_game_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_game_history" />
    </group>
</menu>
